# thriftai

./: .gitignore  LICENSE  README.md  STRESS_REPORT.md  mkdocs.yml  pyproject.toml
.github/workflows/: bench-smoke.yml  docs.yml  live.yml  release-test.yml  release.yml  test.yml
benchmarks/: .env.example  Makefile  PLAN.md  README.md  __init__.py  pricing.yaml
benchmarks/configs/: code_review.yaml  humaneval.yaml  research_analyst.yaml  support_triage.yaml
benchmarks/data/: code_review_sample.py  code_review_snippets.jsonl  humaneval_slice.jsonl  research_questions.jsonl  research_questions_gen.py  support_tickets.jsonl  support_tickets_gen.py
benchmarks/judge/: llm_judge.py
benchmarks/results/: REPORT.md  REPORT_polished.html  REPORT_polished.md  REPORT_polished_standalone.html  aggregates_cost.csv  aggregates_latency.csv  aggregates_quality.csv
benchmarks/runner/: budget.py  conditions.py  export_csv.py  humaneval_score.py  instrumentation.py  judge_runner.py  plots.py  rederive.py  report.py  run.py  stats.py
benchmarks/tests/: conftest.py  test_cache_hit_costing.py  test_code_review.py  test_instrumentation.py  test_llm_judge.py  test_plots.py  test_report.py  test_research_analyst.py  test_runner.py  test_stats.py  test_support_triage.py
benchmarks/tests/fixtures/: support_tickets_tiny.jsonl
benchmarks/workloads/: code_review.py  humaneval.py  research_analyst.py  support_triage.py
docs/: api.md  concepts.md  index.md  production.md  quickstart.md
examples/: demo.ipynb  demo.py  research_pipeline.py
tests/: adversarial_pairs.py  adversarial_report.md  test_adversarial.py  test_concurrency.py  test_core.py  test_cost_controls.py  test_cost_crossover.py  test_live_smoke.py  test_prod_mode.py  test_properties.py  test_recovery.py  test_scale.py  test_semantic_cache.py
thriftai/: __init__.py  agent.py  broker.py  cli.py  session.py
thriftai/cache/: __init__.py  semantic.py
thriftai/cost/: __init__.py  tracker.py
thriftai/providers/: __init__.py
thriftai/trace/: __init__.py
