[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thriftai"
version = "0.1.1"
description = "Make multi-agent LLM development cheaper. Cache, replay, and tier — without changing your pipeline code."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Abhik Ray" },
]
keywords = ["llm", "agents", "cost-optimization", "caching", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "litellm>=1.40.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "hypothesis>=6",
]
semantic = [
    "numpy>=1.24",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.scripts]
thriftai = "thriftai.cli:main"

[tool.hatch.build.targets.sdist]
# Keep developer / test caches out of the published source distribution.
# Hatchling defaults pull in everything not gitignored, but hypothesis and
# others self-gitignore *inside* their cache dirs, so we exclude explicitly.
exclude = [
    ".hypothesis",
    ".pytest_cache",
    ".ruff_cache",
    ".mypy_cache",
    ".coverage",
    "htmlcov",
    "venv",
    ".thriftai",
    "examples/.thriftai-demo",
    "CLAUDE_CODE_PROMPT.md",
    "docs",
    "mkdocs.yml",
    "site",
]

[tool.hatch.build.targets.wheel]
packages = ["thriftai"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: requires a real LLM/embedding API key (set THRIFTAI_LIVE_TEST=1 to run)",
    "slow: long-running tests; opt in via `pytest -m slow`",
]
